(lang dune 2.0)

(name lwt_async_conventions)

(version 0.1)

(source
 (github roddyyaga/lwt-async-conventions))

(documentation "https://github.com/roddyyaga/lwt-async-conventions")

(license MIT)

(authors "Roddy MacSween <github@roddymacsween.co.uk>")

(maintainers "Roddy MacSween <github@roddymacsween.co.uk>")

(generate_opam_files true)

(package
 (name lwt_async_conventions)
 (synopsis "Lwt with Async conventions")
 (depends ocaml lwt))
